--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 
     <style>
+
         body{
             background-color: rgb(24, 24, 24);
         }
@@ -54,7 +55,6 @@
             background-color: rgb(13, 156, 32);
             transform-origin: left top;
             z-index: 2;  
-
         }        
 
         .start-btn,.stop-btn{
@@ -82,22 +82,20 @@
             transform: translate(-50%,-50%);
             margin-top: 100px;
             margin-left: -70px;
-
         }
-
-
+        
     </style>
 
-    <style id="keyframes1">
+    <style id="keyframe1">
     </style>
 
-    <style id="keyframes2">
+    <style id="keyframe2">
     </style>
 
-    <style id="keyframes3">
+    <style id="keyframe3">
     </style>
 
-    <style id="keyframes4">
+    <style id="keyframe4">
     </style>
 
     <div class="dots-container">
@@ -121,7 +119,7 @@
         var colorSet3 = ["rgb(15, 219, 255)","rgb(13, 156, 32)","rgb(255, 56, 21)","rgb(255, 238, 6)","rgb(15, 219, 255)"] //b-g-r-y-b
         var colorSet4 = ["rgb(13, 156, 32)","rgb(255, 56, 21)","rgb(255, 238, 6)","rgb(15, 219, 255)","rgb(13, 156, 32)"] //g-r-y-b-g
 
-
+        //triggers animation
         document.getElementsByClassName("start-btn")[0].addEventListener("click",()=>{
             document.getElementsByClassName("dot1")[0].style.animation = "stretch1 1.5s ease-in-out alternate infinite"
             document.getElementsByClassName("dot2")[0].style.animation = "stretch2 1.5s ease-in-out alternate infinite"
@@ -129,13 +127,16 @@
             document.getElementsByClassName("dot4")[0].style.animation = "stretch4 1.5s ease-in-out alternate infinite"
         })
 
+
+        //add different keyframes
         document.getElementsByClassName("start-btn")[0].addEventListener("click",()=>{
+
             i = -1;
             (function f(){
                 i = (i + 1) % 4;
                 console.log(i)
                 setTimeout(()=>{
-                    var nextColor1 = colorSet1[i+1]
+                    var currColor1 = colorSet1[i+1]
                     document.getElementsByClassName("dot1")[0].style.backgroundColor = `${colorSet1[i]}`
                 setTimeout(f, 3000);
                 keyframes1 = document.getElementById("keyframes1")
@@ -145,7 +146,7 @@
                         
                     }
                     100%{
-                        background-color: ${nextColor1};
+                        background-color: ${currColor1};
                         width: 270px;      
                     }
                 }`
@@ -156,7 +157,7 @@
             (function f(){
                 j = (j + 1) % 4;
                 setTimeout(()=>{
-                    var nextColor2 = colorSet2[j+1]
+                    var currColor2 = colorSet2[j+1]
                     document.getElementsByClassName("dot2")[0].style.backgroundColor = `${colorSet2[j]}`
                 setTimeout(f, 3000); 
                 keyframes2 = document.getElementById("keyframes2")
@@ -166,7 +167,7 @@
                         0%{
                         }
                         100%{
-                            background-color: ${nextColor2};
+                            background-color: ${currColor2};
                             height: 260px;      
                         }
                     }`  
@@ -178,7 +179,7 @@
             (function f(){
                 k = (k + 1) % 4;
                 setTimeout(()=>{
-                    var nextColor3 = colorSet3[k+1]
+                    var currColor3 = colorSet3[k+1]
                     document.getElementsByClassName("dot3")[0].style.backgroundColor = `${colorSet3[k]}`
                 setTimeout(f, 3000);
 
@@ -188,7 +189,7 @@
                     0%{
                     }
                     100%{
-                        background-color: ${nextColor3};
+                        background-color: ${currColor3};
                         height: 260px;      
                     }
                 }`
@@ -200,7 +201,7 @@
             (function f(){
                 l = (l + 1) % 4;
                 setTimeout(()=>{
-                    var nextColor4 = colorSet4[l+1]
+                    var currColor4 = colorSet4[l+1]
                     document.getElementsByClassName("dot4")[0].style.backgroundColor = `${colorSet4[l]}`
                 setTimeout(f, 3000);
 
@@ -210,7 +211,7 @@
                     0%{
                     }
                     100%{
-                        background-color: ${nextColor4};
+                        background-color: ${currColor4};
                         width: 270px;      
                     }
                 }`
@@ -233,5 +234,6 @@
         })
 
     </script>
+
 </body>
 </html>
